Внесены новые исправления под задание 5 спринта после проверки: - ArrayList<Task> стал List<Task>; - В классе InMemoryHistoryManager поле history теперь имеет тип LinkedList; - метод add(Task task) класса InMemoryHistoryManager теперь имеет проверку на null и испольует метод removeFirst() от LinkedList; - число 10 в классе InMemoryHistoryManager стало константой и заменено в соответствующих методах.