@@ -1,28 +1,36 @@
 package ru.yandex.practicum.tasktracker.service;
 
 import ru.yandex.practicum.tasktracker.model.Task;
-import java.util.ArrayList;
+
+import java.util.LinkedList;
+import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    private  final static ArrayList<Task> history = new ArrayList<>();
+    private final static List<Task> history = new LinkedList<>();
+
+    private final int maxHistorySize = 10;
+
     @Override
-    public ArrayList<Task> getHistory() {
+    public List<Task> getHistory() {
         return history;
     }
 
     public void checkSizeOfHistory() {
-        if(history.size() >= 10) {
+        if(history.size() >= maxHistorySize) {
             history.remove(0);
         }
     }
 
     @Override
     public void add(Task task) {
-        if (history.contains(task)) {
+        if (task == null) {
+            System.out.println("Задача не может быть пустой");
+            return;
+        } else if (history.contains(task)) {
             history.remove(task);
-        } else if(history.size() >= 10) {
-            history.remove(0);
+        } else if(history.size() >= maxHistorySize) {
+            history.removeFirst();
         }
         history.add(task);
     }
